HV-1990 Test Hibernate Validator against JDK 24